Update QuoteForm with validation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,41 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Camacho Cleaning Service - Professional Cleaning Solutions</title>
+    <meta
+      name="description"
+      content="Professional cleaning services for residential and commercial properties in your area"
+    />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "HomeAndConstructionBusiness",
+        "name": "Camacho Cleaning Service",
+        "description": "Professional cleaning services for residential and commercial properties",
+        "telephone": "2035360834",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Miami",
+          "addressRegion": "FL",
+          "postalCode": "33137"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": "25.8028",
+          "longitude": "-80.2044"
+        },
+        "offers": {
+          "@type": "Offer",
+          "description": "Get a free cleaning quote tailored to your needs"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "2035360834",
+          "contactType": "customer service",
+          "availableLanguage": "English"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
